# SiphonWorker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: Linux.cmake  Windows.cmake
dummy/: zoo.cpp
src/: CMakeLists.txt  job.h  main.cpp
src/common/: CMakeLists.txt  siphon_strings.hpp  variables.cpp  variables.h  zoo.cpp
src/common/data/: CMakeLists.txt
src/common/data/data_model/: data_model.cpp  data_model.h  data_model_field.cpp  exceptions.cpp  exceptions.h  field_float.cpp  field_float.h  field_int.cpp  field_int.h  frame_column.cpp  frame_column.h  ser_des.h
src/common/data/data_model/columns/: column_int.cpp  column_int.h
src/common/data/data_model/fields/: field_float.h  ser_des.h
src/common/data/deserializer/: data_model_des.cpp  data_model_des.h  deserializer.h
src/common/data/frame/: data_type.h  data_type_arithmetic.h  frame.h
src/common/data/frame/siphon/: siphon_frame.cpp  siphon_frame.h  siphon_frame_array.cpp  siphon_frame_array.h  siphon_type.cpp  siphon_type.h
src/common/data/frame/siphon/types/: int_type.cpp  int_type.h
src/common/data/frame_set/: frame_set.h
src/common/data/reader/: reader.h
src/common/data/serializer/: serializer.h
src/common/data_model/: CMakeLists.txt  data_model.cpp  data_model.h  data_model_exceptions.cpp  data_model_exceptions.h  data_model_field.cpp  data_model_field.h  exceptions.cpp
src/common/data_model/fields/: field_float.cpp  field_float.h  field_int.cpp  field_int.h  ser_des.h
src/common/exceptions/: parse_exception.hpp
src/common/filters/: filter.h  gt.cpp  gt.h
src/common/frame/: CMakeLists.txt  data_type.cpp  data_type.h  data_type_arithmetic.cpp  data_type_arithmetic.h  frame.h
src/common/frame/siphon/: exceptions.cpp  exceptions.h  siphon_frame_array.cpp  siphon_frame_array.h
src/common/frame/siphon/types/: int_type.cpp  int_type.h
src/common/frame_collection/: CMakeLists.txt  frame_collection.h  siphon_frame_collection.cpp  siphon_frame_collection.h
src/common/memory/: memory.h
src/common/models/: ParameterParse.h  ParameterParse.tpp  data_model.cpp  data_model.h  data_model_field.cpp  data_model_field.h  frame.cpp  frame.h  ingest.cpp  ingest.h
src/common/parsing/: CMakeLists.txt  parameter_parse.cpp  parameter_parse.h  parameter_parse.tpp  parse_exception.hpp  siphon_strings.hpp
src/common/processing/: CMakeLists.txt  parser.hpp  processing_error_formatter.h  processor.h  processor.hpp
src/common/processing/filters/parsers/: gt_parser.cpp  gt_parser.h
src/common/processing/filters/processors/: gt.cpp  gt.h
src/common/processing/processing_error_formatter/: plaintext_error_formatter.cpp  plaintext_error_formatter.h
src/common/reader/: CMakeLists.txt
src/common/writer/: CMakeLists.txt  writer.h
src/filters/: CMakeLists.txt  filter.h  filter.hpp  gt.cpp  gt.h  ser_des.cpp
src/test/: CMakeLists.txt  data.hpp
src/test/common/: CMakeLists.txt  filter_tests.cpp  jsonTest.cpp  models_tests.cpp  parameter_parse_tests.cpp
src/test/common/data/: CMakeLists.txt
src/test/common/data/data_model_field/: CMakeLists.txt  common_lib.h  data_model_tests.cpp  field_data.hpp  field_int_tests.cpp
src/test/common/data/siphon_types/: CMakeLists.txt  common.h  data.hpp  type_int.cpp
src/test/common/data_model/: CMakeLists.txt  common_lib.h  data_model_tests.cpp  field_data.hpp  fields_tests.cpp
src/test/common/parsing/: CMakeLists.txt  parameter_parse_tests.cpp
src/test/poc/: CMakeLists.txt  main.cpp  t.cpp
src/test/poc/serdes/: BASESerDes.cpp  BASESerDes.h  BASESerdes.cpp  BASESerdes.h  CMakeLists.txt  FrameSerDes.cpp  FrameSerDes.h  JSONSerDes.cpp  JSONSerDes.h  JSONSerdes.h  PartitionedFrame.cpp  PartitionedFrame.h  PyJSON.cpp  PyJSON.h  main.cpp  main_pch.h  serdes_test.h  serdes_test_pch.h  util.cpp  util.h
