########## Common Libraries ##########

##### Data Library - frames & data models #####
add_subdirectory(data)

##### Parsing Library - json parsing for deserializing processors #####
add_subdirectory(parsing)

##### Processing Library - json parsing for deserializing processors #####
add_subdirectory(processing)

##### Readers Library - used to read bytes from external stores #####
add_subdirectory(reader)

##### Writer Library - writing bytes to external stores #####
add_subdirectory(writer)
