########## Common Libraries ##########

##### Data Model - Data Definitions #####
add_subdirectory(data_model)

##### Frame Library - class for data framse serdes #####
add_subdirectory(frame)

##### Frame Collection Library - class for data framse serdes #####
add_subdirectory(frame_collection)

##### Parsing Library - json parsing for deserializing processors #####
add_subdirectory(parsing)

##### Processing Library - json parsing for deserializing processors #####
add_subdirectory(processing)

##### Readers Library - used to read bytes from external stores #####
add_subdirectory(reader)

##### Writer Library - writing bytes to external stores #####
add_subdirectory(writer)
